--- a/style.css
+++ b/style.css
@@ -17,6 +17,8 @@ body {
 }
 
 #content-wrapper {
+    background-image: url("content/images/mongooselogo.png");
+    background-size: 15vh;
     width: 100%;
     height: 100%;
     background-color: slategray;
@@ -56,4 +58,14 @@ float: right;
 #header-logo {
     height: 100%;
     background-color: red;
+}
+
+#media-main {
+    height: 100%;
+    width: 100%;
+    background-color: red
+}
+.hidden {
+   display: none;
+
 }
