--- a/style.css
+++ b/style.css
@@ -32,9 +32,11 @@ body {
 }
 
 #media-wrapper {
+    vertical-align: center;
     margin-left: 2.5%;
     float: left;
     background-color: dodgerblue;
+
 }
 
 #description-wrapper {
@@ -43,9 +45,9 @@ body {
 }
 
 #nav {
-display: inline-block;
-height: 100%;
-float: right;
+    display: inline-block;
+    height: 100%;
+    float: right;
 }
 
 .menu-button {
@@ -60,12 +62,133 @@ float: right;
     background-color: red;
 }
 
-#media-main {
-    height: 100%;
-    width: 100%;
-    background-color: red
-}
 .hidden {
    display: none;
+}
 
+#promo-video {
+    width: 100%;
+    height: 100%;
+    border: none;
+}
+
+#media-main {
+}
+
+#media-workout {
+    overflow: hidden;
+    height: 100%;
+    width: 100%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* Контейнер слайд-шоу */
+.slideshow-container {
+    height: 90%;
+    width: 100%;
+    position: relative;
+}
+
+/* Скрыть изображения по умолчанию */
+.mySlides {
+   display: none;
+}
+
+/* Вперед иназад кнопки */
+.prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+}
+
+/* Положение "next кнопки" справа */
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+/* При наведении курсора добавьте черный цвет фона с немного прозрачным */
+.prev:hover, .next:hover {
+     background-color: rgba(0,0,0,0.8);
+ }
+
+/* Подпись текст */
+.text {
+    color: #f2f2f2;
+    font-size: 15px;
+    padding: 8px 12px;
+    position: absolute;
+    bottom: 8px;
+    width: 100%;
+    text-align: center;
+}
+
+/* Номер текста (1/3 и т.д.) */
+.numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+}
+
+/* Точки/пули/индикаторы */
+.dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+    position: relative;
+}
+
+.active, .dot:hover {
+    background-color: #717171;
+}
+
+/* Исчезающая анимация */
+.fade {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+}
+
+@keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
 }
