refactored index.html: video uploaded on youtube host

--- a/style.css
+++ b/style.css
@@ -113,6 +113,8 @@ float: right;
 
 #media-workout {
     overflow: hidden;
+    height: 100%;
+    width: 100%;
 }
 
 #media-main {
@@ -227,11 +229,34 @@ display: inline-block;
 
 /* Скрыть изображения по умолчанию */
 .mySlides {
+    display: none;
 }
+
 .hidden {
     display: none;
 }
 
+/* Вперед иназад кнопки */
+.prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+}
+
+/* Положение "next кнопки" справа */
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
 /* При наведении курсора добавьте черный цвет фона с немного прозрачным */
 .prev:hover, .next:hover {
      background-color: rgba(0,0,0,0.8);
@@ -239,7 +264,7 @@ display: inline-block;
 
 /* Подпись текст */
 .text {
-    float: top;
+
     color: #f2f2f2;
     font-size: 15px;
     padding: 8px 12px;
